# project-infinite

./: .env  .gitignore  Cargo.toml  project.env  uploaded_file.txt
frontend/: style.css  upload.html  upload.js
src/: .env  api.rs  auth.rs  database.rs  db.rs  login.rs  logout.rs  main.rs  models.rs  routes.rs  upload.rs  user.rs
src/static/: index.html
static/: index.html  login.html
