[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
reqwest = { version = "0.11", features = ["json"] }

serde_json = "1.0"
actix-files = "0.6"
base64 = "0.13.0"
qrcode = "0.13.0"
image = "0.24.0"