[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

chrono = "0.4"
bson = "2.0"

actix-identity = "0.5"

mongodb = "2.4.0"


hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

actix-session = { version = "0.6.2", features = ["cookie-session"] }

 json = "0.12.4"

actix-files = "0.6"
