[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
bson = "2.0"
actix-identity = "0.5"
mongodb = "2.4.0"
uuid = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-files = "0.6"
base64 = "0.13.0"
anyhow = "1.0"
actix-multipart = "0.3"
futures-util = "0.3"
qrcode = "0.13.0"
image = "0.24.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["multipart", "json"] }
sanitize-filename = "0.3"
actix-http = "3.0"

bytes = "1"
actix-cors = "0.7"